# pallet-detetction

./: .gitignore  README.md
spds_conversions/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_conversions/include/spds_conversions/: conversions.h
spds_gazebo/cititruck/cititruck_description/: CHANGELOG.rst
spds_gazebo/gazebo_models_spds/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_gazebo/gazebo_models_spds/env-hooks/: 90.gazebo_models_spds.sh.em
spds_gazebo/gazebo_models_spds/launch/: dumpster.launch  fire_hydrant.launch
spds_gazebo/gazebo_plugins_spds/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_gazebo/gazebo_worlds_spds/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_gazebo/gazebo_worlds_spds/launch/: aass_lab_map_server.launch  aass_lab_map_server2.launch  aass_lab_world_paused.launch  arena_map_server.launch  arena_map_server_scaled.launch  arla_kmo_state_map_server.launch  basement_map_server.launch  basement_world_paused.launch  boxobstacles_map_server_1m_res.launch  elsite_map_server_1m.launch  elsite_map_server_1m_down.launch  elsite_map_server_1m_left.launch  elsite_map_server_1m_right.launch  empty_map_server.launch  empty_map_server_1m_res.launch  empty_map_server_1m_res_huge.launch  empty_world_paused.launch  endless_corridor_world_paused.launch  icra2016_basement_map_server.launch  kiruna_mine_world_paused.launch  kiruna_mine_world_paused_huge_flat.launch  kjula_world_paused.launch  kuka_fair_aass_lab_map_server.launch  kuka_fair_booth_map_server.launch  kuka_fair_map_server.launch  kuka_fair_world_paused.launch  ncfm_map_server.launch  ncfm_map_server_old.launch  ncfm_world.launch  obstacle_map_server.launch  obstacle_map_server_1m_res.launch  overlap_map_server_1m.launch  roblab_map_server_world_frame.launch  robot_lab_map_server.launch  robot_lab_paused.launch  robot_lab_world.launch  vikanscross_sample_map_server_1m.launch
spds_generic/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_generic/test/: random_test.cc  serialization_test.cc
spds_geometry/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_geometry/src/: b_spline.cpp  b_spline2d.cpp  pallet_model_2d.cpp  polygon.cpp  robot_model_2d.cpp
spds_geometry/test/: polygon2_test.cpp  polygon_test.cpp
spds_launch/: CMakeLists.txt  package.xml
spds_launch/launch/: truck_with_pallet_LT.launch  truck_with_pallet_web.launch
spds_launch/scripts/: tmux_new_pane_closed.sh  tmux_new_window.sh  tmux_split_h.sh  tmux_split_v.sh
spds_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
spds_msgs/msg/: ActivePolygonConstraints.msg  DrillTargetArray.msg  IliadItemArray.msg  ObjectPose.msg  Operation.msg  Path.msg  RobotPathReplanning.msg  RobotReschedule.msg  RobotTarget.msg  Task.msg  Trajectories.msg  Trajectory.msg  TrajectoryPoint.msg  VectorMap.msg
spds_msgs/srv/: ComputeTask.srv  ExecuteTask.srv  GetDeltaTVec.srv  GetDrillTargets.srv  GetGeoFence.srv  GetParametrizedPath.srv  GetPath.srv  GetPolygonConstraints.srv  GetPolygonFootPrint.srv  GetSmoothedPath.srv  GetSmoothedStraightPath.srv  GetVectorMap.srv  ObjectPoseEstimation.srv  SetTask.srv  UpdateTask.srv
spds_msgs/test/: message_test.cpp
spds_perception/spds_pallet_recognision/: CMakeLists.txt  package.xml
spds_perception/spds_pallet_recognision/include/spds_pallet_recognision/: pallet_segmentation.hh
spds_perception/spds_pallet_recognision/launch/: filter_chain.launch
spds_perception/spds_pallet_recognision/params/: default_filter_chain_params.yaml
spds_perception/spds_pallet_recognision/src/: pallet_segmentation.cpp  spds_pallet_recognision_node.cpp
spds_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+55 files in other folders)
