<?xml version="1.0"?>
<package>
  <name>gazebo_models_spds</name>
  <version>0.4.0</version>
  <description>gazebo_models_spds</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  
  </export>
</package>
