<?xml version="1.0"?>
<package>
  <name>gazebo_worlds_spds</name>
  <version>0.4.0</version>
  <description>The gazebo_worlds_spds package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  
  </export>
</package>
